# SlambookPractice

./: myPhoneCamera.txt
ch5/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  joinMap  joinMap.cc
ch6/: CMakeCache.txt  CMakeLists.txt  Makefile  ceres-main.cc  ceres_fitting  cmake_install.cmake  costfunction.h  curve_fitting  random-result.txt  zm
ch6/fitting result/: result.py
